--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@upstash/redis": "^1.34.3",
     "babel-plugin-react-compiler": "^19.0.0-beta-a7bf2bd-20241110",
     "lucide-react": "^0.456.0",
+    "motion": "^12.23.3",
     "next": "15.0.3",
     "next-mdx-remote": "^5.0.0",
     "react": "19.0.0-rc-66855b96-20241106",
